# option-pricing-library

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API_STABILITY.md  CHANGELOG.md  LICENSE  README.md  README.template.md  ROADMAP.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
benchmarks/: conftest.py  test_bench_heston_calibration.py  test_bench_iv.py  test_bench_localvol.py  test_bench_macro.py  test_bench_pde.py  test_bench_tree.py
demos/: 01_black_scholes_and_greeks.ipynb  02_monte_carlo_pricing_and_error.ipynb  03_binomial_convergence.ipynb  04_implied_volatility.ipynb  05_pde_pricing_and_diagnostics.ipynb  05_vol_surface_and_noarb.ipynb  06_pde_pricing_and_diagnostics.ipynb  06_surface_noarb_svi_repair.ipynb  06_vol_surfaces_localvol_pde.ipynb  06_vol_surfaces_localvol_pde_flagship_applied_DEMO.ipynb  07_capstone_surface_localvol_pde_showcase_readable_with_gj_example51.ipynb  07_essvi_smooth_surface_for_dupire.ipynb  07_vol_surfaces_localvol_pde.ipynb  08_localvol_pde_repricing.ipynb  09_surface_to_localvol_pde_integration.ipynb  10_heston_pricing_and_smile_vectorized.ipynb  11_heston_diagnostics_review.ipynb  12_heston_mc_convergence.ipynb  13_heston_calibration_vs_localvol.ipynb  heston.ipynb
design/: principles.md
docs/: api.md  architecture.md  index.md  installation.md  performance.md  roadmap.md  validation_matrix.md  visual-audit.md
examples/: curves_first.py  heston_calibration_vs_localvol.py  implied_vol.py  quickstart.py
mkdocs_overrides/: main.html
notebooks/: 01_brownian_motion.ipynb  02_gbm_and_logreturns.ipynb  03_black_scholes_pricing.ipynb  04_binomial_vs_bs.ipynb  05_mc_pricing_basics.ipynb  test_pricing_bs.py
option_pricing/: __init__.py  diagnostics.py  pricing_bs.py  pricing_mc.py  processes.py
option_pricing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase-6-signature-proof-moments-package/: 01-phase-6-master-brief.md  02-work-package-order-and-rules.md  03-paste-ready-master-prompt.md  README.md  work-package-1-homepage-hero-report.md  work-package-2-surface-repair-report.md  work-package-3-essvi-smooth-handoff-report.md  work-package-4-architecture-report.md  (+3 more)
plans/: AGENT_BRIEF.md
(+738 files in other folders)
